initial gitcoin desktop commit

--- a/index.html
+++ b/index.html
@@ -5,13 +5,15 @@
     <!-- https://developer.mozilla.org/en-US/docs/Web/HTTP/CSP -->
     <meta http-equiv="Content-Security-Policy" content="default-src 'self'; script-src 'self'">
     <meta http-equiv="X-Content-Security-Policy" content="default-src 'self'; script-src 'self'">
-    <title>Hello World!</title>
+    <meta http-equiv="refresh" content="0;url=https://gitcoin.co/chat" />
+
+    <title>Booting..</title>
   </head>
   <body>
-    <h1>Hello World!</h1>
-    We are using Node.js <span id="node-version"></span>,
-    Chromium <span id="chrome-version"></span>,
-    and Electron <span id="electron-version"></span>.
+    <script type="text/javascript">
+      document.location.href="https://gitcoin.co/chat";
+    </script>
+    <a href="https://gitcoin.co/chat">Click here</a>
 
     <!-- You can also require other files to run in this process -->
     <script src="./renderer.js"></script>
